# django-setup-tool

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  setup.cfg  setup.py
requirements/: development.txt  requirements-packaging.txt
setup_tool/: __init__.py
setup_tool/conf/app_template/: apps.py-tpl
setup_tool/conf/app_template/models/: __init__.py-tpl  example.py-tpl
setup_tool/conf/project_template/: manage.py-tpl
setup_tool/conf/project_template/project_name/: asgi.py-tpl  wsgi.py-tpl
setup_tool/conf/project_template/project_name/settings/: base.py-tpl
setup_tool/management/: __init__.py  apps.py
setup_tool/management/commands/: prettystartapp.py  prettystartproject.py  startproject.py
