[metadata]
name = Django setup tool
version = 0.0.3
author = cafitac
author_email = cafitac99@gmail.com
description = Project initial extension for Django.
long_description = file: README.rst
long_description_content_type = text/markdown
license_file = LICENSE
url = https://github.com/cafitac/django-initital-tool
project_urls =
    Bug Tracker = https://github.com/cafitac/django-initial-tool/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8