[metadata]
name = Django setup tool
version = 0.0.4
author = cafitac
author_email = cafitac99@gmail.com
description = Project initial extension for Django.
long_description = file: README.rst
long_description_content_type = text/markdown
license_file = LICENSE
url = https://github.com/cafitac/django-initital-tool
project_urls =
    Bug Tracker = https://github.com/cafitac/django-initial-tool/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    django-setup-tool = setup_tool.management:execute_from_command_line

[flake8]
exclude = build,.git,./tests/.env
extend-ignore = E203
max-line-length = 88

[isort]
profile = black
default_section = THIRDPARTY
known_first_party = setup_tool